[metadata]
name = Bokeh Smith
version = attr: bokeh_smith.__version__
author = Samuel James Bader
author_email = samuel.james.bader@gmail.com
description = For drawing Smith charts with Bokeh
license = 'MIT'

[options]
install_requires =
    bokeh
    numpy
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src